# astrodb_bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/astrodb-ingest-source/: SKILL.md
.claude/skills/astrodb-website/: SKILL.md
.claude/skills/ingest-source/: SKILL.md
.github/workflows/: sync-version.yml
skills/astrodb-build-create-db/: SKILL.md
skills/astrodb-build-create-db/evals/: evals.json  test_schema_brown_dwarfs.yaml  test_schema_photometry.yaml
skills/astrodb-build-create-db/scripts/: create_db.py  generate_tests.py
skills/astrodb-build-parse-table/: SKILL.md
skills/astrodb-build-parse-table/evals/: evals.json
skills/astrodb-build-parse-table/references/: file-formats.md  format-specific-metadata.md  units-inference.md
skills/astrodb-build-schema-generate/: SKILL.md
skills/astrodb-build-schema-generate/evals/: evals.json
skills/astrodb-build-schema-generate/references/: felis-syntax.md
skills/astrodb-build-schema-match/: SKILL.md
skills/astrodb-build-schema-match/evals/: evals.json
skills/astrodb-build-schema-match/references/: column-patterns.md  html-output.md  photometry-filters.md  schema.md
skills/astrodb-build-schema-validate/: SKILL.md
skills/astrodb-build-setup/: SKILL.md
skills/astrodb-ingest-publication/: SKILL.md
skills/astrodb-ingest-publications/: SKILL.md
skills/astrodb-ingest-sources/: SKILL.md
skills/astrodb-match-schema/: SKILL.md
skills/astrodb-parse-data-table/: SKILL.md
skills/astrodb-setup/: SKILL.md
skills/astrodb-setup/evals/: evals.json
skills/astrodb-website/: SKILL.md
(+22 files in other folders)
